[package]
name = "radalbum"
version = "0.1.0"
authors = ["Lukas Kirschner <lukas@lukaskirschner.de>"]
edition = "2021"

[dependencies]
markdown = "=1.0.0-alpha.18"
nom-exif = "1.3.0"

[profile.release]
debug = false
strip = "symbols"
debug-assertions = false
lto = true
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
opt-level = 3