[package]
name = "radalbum"
version = "0.1.0"
authors = ["Lukas Kirschner <lukas@lukaskirschner.de>"]
edition = "2021"

[dependencies]
markdown = "=1.0.0-alpha.21"
clap = { version = "4.5.18", features = ["derive"] }
itertools = "0.13.0"
rexiv2 = "0.10.0"

[profile.release]
debug = false
strip = "symbols"
debug-assertions = false
lto = true
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
